# flowcraft

./: .gitattributes  .gitignore  .mcp.json.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  README_zh.md  ROADMAP.md  SECURITY.md  _gen.py  _gen_skills.py  _write_changelog.py  _write_compare_part2.py  convert_openclaw_skills.py  start_flowcraft.bat  workflow_analysis.txt
core/: pyproject.toml
core/eval/: __init__.py  engine.py  llm_judge.py  regression.py  report.py  root_cause.py  runner.py
core/eval/rule_evaluators/: __init__.py  chain.py  efficiency.py  security.py  state_transition.py  structure.py
core/eval/suites/: manifest.json
core/flowcraft_core/: __init__.py  app.py  logging_config.py  simple_app.py  simple_server.py
core/flowcraft_core/api/: __init__.py  server.py
core/flowcraft_core/approval/: __init__.py  exec_approval.py  manager.py
core/flowcraft_core/config/: i18n.py  prompts.py  settings.py  sync.py
core/flowcraft_core/domain/: enums.py  schemas.py  simple_models.py
core/flowcraft_core/execution/: __init__.py  checkpoint.py  completion_checker.py  context_compressor.py  engine.py  failure_handler.py  multi_agent.py  react_executor.py  reflection.py  session_isolation.py  subtask.py
core/flowcraft_core/feedback/: __init__.py  agent_response_guard.py  feedback_memory_integrator.py  insight_mapper.py  phrase_library.py  sentiment.py  templates.py  vent_session.py
core/flowcraft_core/intent/: __init__.py  engine.py  thinking_evaluator.py
core/flowcraft_core/knowledge/: __init__.py  adaptive_rag.py  agentic_rag.py  (+1 more)
core/tests/: conftest.py  test_config.py  test_document_tools.py  test_execution.py  test_execution_checkpoint.py  test_integration.py  test_intent_planning.py  test_memory.py  test_model_gateway.py  test_network_tools.py  test_observability.py  test_playwright_tools.py  test_policy.py  test_quality.py  test_runtime_smoke.py  test_sandbox.py  test_tools.py  test_tools_full.py
(+135 files in other folders)
