[project]
name = "flowcraft-core"
version = "0.1.0"
description = "Harness-first local Agent workflow runtime."
readme = "../README.md"
license = {text = "MIT"}
authors = [
    {name = "FlowCraft Contributors"},
]
keywords = [
    "ai-agent",
    "workflow",
    "llm",
    "agent-framework",
    "task-automation",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/devmom/flowcraft"
Documentation = "https://github.com/devmom/flowcraft#readme"
Repository = "https://github.com/devmom/flowcraft.git"
Issues = "https://github.com/devmom/flowcraft/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
browser = [
    "playwright>=1.45.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "unit: 单元测试 — 单函数/类，所有依赖 Mock",
    "component: 组件测试 — 模块内多类协作",
    "integration: 集成测试 — 跨模块 + 真实 DB",
    "e2e: 端到端测试 — 全链路 + 真实模型",
    "security: 安全专项测试",
    "contract: API 契约/Schema 测试",
    "slow: 超过 5 秒的慢测试",
    "model: 需要真实 LLM API Key 的测试",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
